# secretbet

./: Cargo.toml  NOTICE  README copy.md  README.md
examples/: schema.rs
schema/: handle_msg.json  init_msg.json  query_msg.json  room_state_response.json  state.json  state_response.json
src/: contract.rs  lib.rs  msg.rs  rand.rs  state.rs
tests/: integration.rs
