[package]
name = "wasmbet-contract-timeroulette"
version = "0.1.0"
authors = ["wasmbet <wasmbet@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v0.8.0" }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v0.8.0" }
schemars = "0.7"
serde = { version = "1.0.114", default-features = false, features = [
  "derive",
  "alloc"
] }
rand_chacha = "0.2.2"
rand_core = "0.5.1"
sha2 = "0.9.1"
serde-json-wasm = "0.2.1"
